[package]
name = "tiptag_substreams"
version = "0.2.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17"
hex-literal = "0.3.4"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2.15"
prost = "0.13"
prost-types = "0.13"
substreams = "0.7"
substreams-ethereum = "0.11"
substreams-database-change = "4.0.0"
base64 = "0.13"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.11"
regex = "1.8"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
